# pruebaTecnica

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  changes.md  docker-compose.yml  init.sql  lambda.py  main.py  pyproject.toml  requirements.txt
configs/: validation_rules.yaml
dags/: ani_scraping_dag.py
src/: config.py  extraction.py  utils.py  validation.py  writing.py
