[project]
name = "pruebatecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "botocore",
    "numpy",
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit",
]
