[project]
name = "pruebatecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow==2.7.1",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.46",
    "botocore>=1.42.46",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests==2.31.0",
]

[dependency-groups]
dev = [
    "pre-commit",
]
